--- a/tbsetup/power_whol.pm.in
+++ b/tbsetup/power_whol.pm.in
@@ -2,7 +2,7 @@
 
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2004, 2005 University of Utah and the Flux Group.
+# Copyright (c) 2004-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -200,7 +200,7 @@ sub whacksome($@) {
 	    warn "WhOL: could not send WhOL packets\n";
 	    $failed++;
 	} else {
-	    print STDERR "Whacked ", @nodelist, "\n";
+	    print STDERR "Whacked ", join(' ', @nodelist), "\n";
 	}
     }
 
