--- a/install/boss-install.in
+++ b/install/boss-install.in
@@ -2,7 +2,7 @@
 
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2003-2010 University of Utah and the Flux Group.
+# Copyright (c) 2003-2010 , 2011University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -121,6 +121,7 @@ my $STL_PATCH       = "$TOP_SRCDIR/patches/g++.patch";
 my $M2CRYPTO_PATCH  = "$TOP_SRCDIR/patches/m2crypto.patch";
 my $MYSQL_PM_PATCH  = "$TOP_SRCDIR/patches/Mysql.pm.patch";
 my $PHP4_PATCH      = "$TOP_SRCDIR/patches/php4-Makefile.patch";
+my $SELFLOAD_PATCH  = "$TOP_SRCDIR/patches/SelfLoader.patch";
 my $INIT_PRIVKEY    = "$TOP_SRCDIR/install/identity";
 
 my $SSH_CONFIG      = "/etc/ssh/ssh_config";
@@ -718,6 +719,11 @@ Phase "patches", "Applying patches", sub {
 	    PhaseSkip("Patch already applied");
 	}
 	ExecQuietFatal("$PATCH -d $dir -f -l -i $patchfile");
+    };
+    Phase "perlselfloaderpatch", "Fixing perl self-loader", sub {
+	my $perldir = "/usr/local/lib/perl5/5.10.1";
+	DoneIfDoesntExist("$perldir/SelfLoader.pm");
+	ExecQuietFatal("$PATCH -d $perldir -i $SELFLOAD_PATCH");
     };
 };
 
