--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -2,7 +2,7 @@
 
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2003-2010 University of Utah and the Flux Group.
+# Copyright (c) 2003-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -282,6 +282,7 @@ if ($SCRATCHDIR) {
 #
 my $M2CRYPTO_PATCH  = "$TOP_SRCDIR/patches/m2crypto.patch";
 my $MAILMAN_PATCH   = "$TOP_SRCDIR/patches/mailman.patch";
+my $SELFLOAD_PATCH  = "$TOP_SRCDIR/patches/SelfLoader.patch";
 my $IDENTPUB        = "$TOP_SRCDIR/install/identity.pub";
 
 #
@@ -638,6 +639,11 @@ Phase "patches", "Applying patches", sub {
 	    ExecQuietFatal("$PATCH -f -l -p0 -i $patchfile");
 	};
     }
+    Phase "perlselfloaderpatch", "Fixing perl self-loader", sub {
+	my $perldir = "/usr/local/lib/perl5/5.10.1";
+	DoneIfDoesntExist("$perldir/SelfLoader.pm");
+	ExecQuietFatal("$PATCH -d $perldir -i $SELFLOAD_PATCH");
+    };
     if ($MAILMANSUPPORT) {
 	Phase "mailmanpatch", "Patching mailman", sub {
 	    my $patchfile = $MAILMAN_PATCH;
