--- a/tmcd/common/config/rc.config
+++ b/tmcd/common/config/rc.config
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2004-2008 University of Utah and the Flux Group.
+# Copyright (c) 2004-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use English;
@@ -93,8 +93,7 @@ elsif (FAKEJAILED()) {
 		    "rc.ifconfig", "rc.progagent");
 }
 elsif (WINDOWS()) {
-    @bootscripts = ("rc.misc", "rc.localize", 
-		    "rc.keys", "rc.mounts",
+    @bootscripts = ("rc.misc", "rc.localize", "rc.keys", "rc.mounts",
 		    "rc.accounts", "rc.topomap", 
 		    "rc.route", "rc.ifconfig",
 		    "rc.hostnames", "rc.lmhosts", "rc.syncserver", 
