--- a/utils/create_image.in
+++ b/utils/create_image.in
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -wT
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2010 University of Utah and the Flux Group.
+# Copyright (c) 2000-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use English;
@@ -301,11 +301,13 @@ if (! TBValidUserDir($filename, 0)) {
 # Be sure to kill off running frisbee. If a node is trying to load that
 # image, well tough. 
 #
-system("$friskiller -k $imageid");
-if ($?) {
-    die("*** $0:\n".
-	"    Could not kill running frisbee for $imageid!\n");
-}
+# XXX master frisbee server needs an interface for doing this.
+#
+#system("$friskiller -k $imageid");
+#if ($?) {
+#    die("*** $0:\n".
+#	"    Could not kill running frisbee for $imageid!\n");
+#}
 
 if (-e $filename) {
     unlink($filename) or
