--- a/configure.in
+++ b/configure.in
@@ -911,8 +911,7 @@ outfiles="$outfiles Makeconf GNUmakefile \
 	tbsetup/batchexp tbsetup/batch_daemon tbsetup/repos_daemon \
 	tbsetup/wanlinkinfo tbsetup/wanassign \
 	tbsetup/swapexp	tbsetup/endexp tbsetup/elabinelab \
-	tbsetup/frisbeelauncher tbsetup/eventsys.proxy tbsetup/frisbeeimage \
-	tbsetup/subboss_frisbeelauncher tbsetup/subboss_frisbeeimage \
+	tbsetup/eventsys.proxy \
 	tbsetup/snmpit.proxy tbsetup/snmpit_remote.pm \
 	tbsetup/snmpit tbsetup/ns2ir/GNUmakefile \
 	tbsetup/ns2ir/parse.tcl tbsetup/ns2ir/tb_compat.tcl \
@@ -927,7 +926,7 @@ outfiles="$outfiles Makeconf GNUmakefile \
 	tbsetup/tbreport tbsetup/named_setup tbsetup/exports_setup \
 	tbsetup/checkpass/GNUmakefile tbsetup/assign_wrapper tbsetup/ptopgen \
 	tbsetup/assign_wrapper2 \
-	tbsetup/frisbeelauncher tbsetup/node_update \
+	tbsetup/node_update \
 	tbsetup/savelogs tbsetup/setgroups \
 	tbsetup/savelogs.proxy tbsetup/rmgroup tbsetup/mkexpdir \
 	tbsetup/node_control tbsetup/node_attributes \
