--- a/rc.d/3.testbed.sh.in
+++ b/rc.d/3.testbed.sh.in
@@ -48,19 +48,10 @@ case "$1" in
 
 		if [ -x @prefix@/sbin/sslxmlrpc_server.py ]; then
 			echo -n " sslxmlrpc_server"
-			@prefix@/sbin/sslxmlrpc_server.py
+			@prefix@/sbin/sslxmlrpc_server.py 2>/dev/null
 		fi
 
-		if [ -x @prefix@/sbin/mfrisbeed ]; then
-			echo -n " mfrisbeed"
-			if [ -x @prefix@/sbin/daemon_wrapper ]; then
-				@prefix@/sbin/daemon_wrapper \
-				  -i 30 -l @prefix@/log/mfrisbeed_wrapper.log \
-				  @prefix@/sbin/mfrisbeed
-			else
-				@prefix@/sbin/mfrisbeed
-			fi
-		fi
+		# mfrisbeed started with its own script
 
 		if [ -x @prefix@/sbin/reload_daemon  ]; then
 			echo -n " reloadd"
