--- a/utils/testbed-control.in
+++ b/utils/testbed-control.in
@@ -30,7 +30,7 @@ my $TB	         = "@prefix@";
 my $TBOPS        = "@TBOPSEMAIL@";
 my $SETSITEVAR   = "$TB/sbin/setsitevar";
 my $STARTUP      = "/usr/local/etc/rc.d/3.testbed.sh";
-my $FRISBEE      = "$TB/sbin/frisbeelauncher";
+my $MFRISBEED    = "/usr/local/etc/rc.d/3.mfrisbeed.sh";
 
 # Protos
 sub Fatal($);
@@ -91,8 +91,7 @@ sub Restart()
 
     if ($stopped) {
 	print "Starting up testbed daemons.\n";
-	system("$STARTUP start");
-	if ($?) {
+	if (system("$MFRISBEED start") || system("$STARTUP start")) {
 	    print "*** Could not restart testbed daemons.\n";
 	    exit(1);
 	}
@@ -185,27 +184,12 @@ while (1) {
     sleep(30);
 }
 print "** Testbed is quiet; stopping testbed daemons ... \n";
-system("$STARTUP stop >/dev/null 2>&1");
-if ($?) {
+if (system("$STARTUP stop >/dev/null 2>&1") ||
+    system("$MFRISBEED stop >/dev/null 2>&1")) {
     Fatal("Could not stop testbed daemons. Stopping. Best to reboot!");
 }
 $stopped = 1;
 
-my $activeimages = Image->ActiveImages();
-if (defined($activeimages)) {
-    my @activeimages = @{ $activeimages };
-    if (@activeimages) {
-	print "** Stopping running frisbee processes ...\n";
-    }
-    foreach my $image (@activeimages) {
-	my $imageid = $image->imageid();
-	print "-> Killing frisbee for $image ...\n";
-	system("$FRISBEE -k $imageid");
-	if ($?) {
-	    Fatal("Could not stop frisbee for $image!");
-	}
-    }
-}
 if ($ARGV[0] eq "restart") {
     print "** Testbed is stopped. Waiting a moment before restarting ...\n";
     sleep(2);
