Implement limited backward compatibility with the old frisbee setup.
The big backward compatibility issue is that we no longer store running
frisbeed info in the DB.  This means that loadinfo could not return
address:port info to clients and thus old frisbee MFSes could no longer
work.  While not a show stopper to require people to update their MFS first,
I made a token effort to implement backward compat as follows.

When an old frisbee MFS does "tmcc loadinfo" (as identified by a tmcd
version < 33), tmcd will invoke "frisbeehelper" to startup a daemon.
Sound like frisbeelauncher?  Well sorta, but vastly simplified and I only
want this to be temporary.  The helper just uses the frisbee client to make
a "proxy" request to the localhost master server.  The Emulab configuration
of the master server now allows requests from localhost to proxy for another
node.

frisbeehelper is also used by webfrisbeekiller to kill a running daemon
(yes, just like frisbeelauncher).  It makes a proxy status request on
localhost and uses the returned info to identify the particular instance
and kill it.

--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -135,6 +135,8 @@ mfrisbeed: $(MSERVEROBJS)
 	cp mfrisbeed mfrisbeed.debug
 	strip mfrisbeed
 
+mserver.o: $(SRCDIR)/mserver.c decls.h configdefs.h utils.h
+	$(CC) -c $(MSERVERFLAGS) $(SRCDIR)/mserver.c
 config.o: $(SRCDIR)/config.c configdefs.h log.h
 	$(CC) -c $(MSERVERFLAGS) $(SRCDIR)/config.c
 config_emulab.o: $(SRCDIR)/config_emulab.c configdefs.h log.h
