--- a/rc.d/3.mfrisbeed.sh.in
+++ b/rc.d/3.mfrisbeed.sh.in
@@ -42,6 +42,7 @@ stop)
 	kill `cat /var/run/mfrisbeed.pid` >/dev/null 2>&1
 	rm -f /var/run/mfrisbeed.pid
     fi
+    rm -f /var/run/frisbeed-*.pid
     exit 0
     ;;
 *)
@@ -51,6 +52,7 @@ stop)
 esac
 
 echo -n " mfrisbeed"
+rm -f /var/run/frisbeed-*.pid
 args="-C emulab"
 # if an inner elab, use outer boss as our parent
 if [ -n "@OUTERBOSS_NODENAME@" ]; then
