--- a/tbsetup/GNUmakefile.in
+++ b/tbsetup/GNUmakefile.in
@@ -35,7 +35,7 @@ BIN_STUFF	= power snmpit tbend tbprerun tbreport \
 
 SBIN_STUFF	= resetvlans console_setup.proxy sched_reload named_setup \
 		  batch_daemon exports_setup reload_daemon sched_reserve \
-		  console_reset db2ns bwconfig \
+		  console_reset db2ns bwconfig frisbeehelper \
 		  rmgroup mkgroup setgroups mkproj modgroups \
 		  exports_setup.proxy vnode_setup eventsys_start \
 		  sfskey_update sfskey_update.proxy rmuser idleswap \
@@ -92,7 +92,7 @@ LIB_STUFF       = libtbsetup.pm exitonwarn.pm libtestbed.pm snmpit_intel.pm \
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = node_reboot eventsys_control tarfiles_setup savelogs \
 			tbrsync
-SETUID_SBIN_SCRIPTS  = mkproj rmgroup mkgroup \
+SETUID_SBIN_SCRIPTS  = mkproj rmgroup mkgroup frisbeehelper \
 			rmuser idleswap named_setup exports_setup \
 			sfskey_update setgroups newnode_reboot vnode_setup \
 			elabinelab nfstrace rmproj
@@ -231,6 +231,8 @@ endif
 	chmod u+s $(INSTALL_SBINDIR)/rmgroup
 	chown root $(INSTALL_SBINDIR)/mkgroup
 	chmod u+s $(INSTALL_SBINDIR)/mkgroup
+	chown root $(INSTALL_SBINDIR)/frisbeehelper
+	chmod u+s $(INSTALL_SBINDIR)/frisbeehelper
 	chown root $(INSTALL_SBINDIR)/rmuser
 	chmod u+s $(INSTALL_SBINDIR)/rmuser
 	chown root $(INSTALL_SBINDIR)/idleswap
