--- a/rc.d/3.mfrisbeed-subboss.sh.in
+++ b/rc.d/3.mfrisbeed-subboss.sh.in
@@ -6,7 +6,11 @@
 # KEYWORD: shutdown
 
 #
-# Start up the frisbee master server.
+# Start up the frisbee master server on a subboss.
+# There is no sure fire way to dynamically tell if we are a subboss right now.
+# We cannot use "tmcc role" because tmcc doesn't exist/work on real boss.
+# So we just do our own script right now.
+#
 # We run it under the daemon wrapper if available so that it will get
 # automatically restarted.
 #
@@ -53,11 +57,7 @@ esac
 
 echo -n " mfrisbeed"
 rm -f /var/run/frisbeed-*.pid
-args="-C emulab -i @BOSSNODE_IP@"
-# if an inner elab, use outer boss as our parent
-if [ -n "@OUTERBOSS_NODENAME@" ]; then
-    args="$args -S @OUTERBOSS_NODENAME@"
-fi
+args="-C null -S @BOSSNODE_IP@ -I /z/image_cache -A -M -R"
 if [ -x @prefix@/sbin/daemon_wrapper ]; then
     @prefix@/sbin/daemon_wrapper -i 30 -l @prefix@/log/mfrisbeed_wrapper.log \
 	@prefix@/sbin/mfrisbeed -d $args
