--- a/rc.d/GNUmakefile.in
+++ b/rc.d/GNUmakefile.in
@@ -19,7 +19,7 @@ include $(OBJDIR)/Makeconf
 
 RC_SCRIPTS	= 2.mysql-server.sh 3.mfrisbeed.sh 3.testbed.sh \
 		  2.dhcpd.sh 1.mysql-client.sh
-SUBBOSS_SCRIPTS	= 2.dhcpd.sh
+SUBBOSS_SCRIPTS	= 2.dhcpd.sh 3.mfrisbeed-subboss.sh
 OPS_SCRIPTS     = 3.and.sh 1.mysql-client.sh 1.mysql-server.sh
 ifeq ($(ELVINCOMPAT),1)
 OPS_SCRIPTS    += 2.elvind.sh 3.elvin_gateway.sh
@@ -48,7 +48,7 @@ endif
 # Force dependencies to make sure configure regenerates if the .in file
 # is changed.
 # 
-all: $(RC_SCRIPTS) $(OPS_SCRIPTS) capture.sh 3.v0_gateway.sh
+all: $(RC_SCRIPTS) $(OPS_SCRIPTS) $(SUBBOSS_SCRIPTS) capture.sh 3.v0_gateway.sh
 
 include $(TESTBED_SRCDIR)/GNUmakerules
 
