Various changes related to the port mfrisbeed listens on.
1. Add -i option to tie mfrisbeed to a particular interface and use that
   option for a multi-homed boss node (only listen on inside interface).

2. Make that option play nice with the localhost proxying features of a
   previous commit: we also listen on localhost in this case.  The localhost
   proxying feature now has the compile time option USE_LOCALHOST_PROXY
   rather than mixing it up with the USE_EMULAB_CONFIG option (even though
   it probably will only ever be used in the Emulab config).

3. Both of those were really to fix one bug: if we got a request from
   localhost to start up a frisbeed daemon, we were starting it up bound
   to the localhost interface.  Now we will make sure the server gets
   started up using the "other" interface, i.e., the one specified with -i.

--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -78,7 +78,7 @@ ifeq ($(WITH_MSERVER_EMULAB),1)
 # Emulab master server config
 MYSQLCFLAGS	= -I/usr/local/include
 MYSQLLIBS	= -L/usr/local/lib/mysql -lmysqlclient
-MSERVERFLAGS	+= -DUSE_EMULAB_CONFIG $(MYSQLCFLAGS) -I$(TESTBED_SRCDIR)/lib/libtb
+MSERVERFLAGS	+= -DUSE_EMULAB_CONFIG -DUSE_LOCALHOST_PROXY $(MYSQLCFLAGS) -I$(TESTBED_SRCDIR)/lib/libtb
 MSERVEROBJS	+= config_emulab.o
 MSERVERLIBS	+= $(OBJDIR)/lib/libtb/libtb.a $(MYSQLLIBS)
 endif
