Add MASTER_SERVER flag to Makefile-linux.sa.
That file is used to build the Linux MFS version of frisbee.
Also cranked up the allowed bandwidth from subboss (config_null).

--- a/os/frisbee.redux/Makefile-linux.sa
+++ b/os/frisbee.redux/Makefile-linux.sa
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2004 University of Utah and the Flux Group.
+# Copyright (c) 2000-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -30,7 +30,7 @@ SERVERLIBS	= $(PTHREADLIBS)
 SERVEROBJS	= server.o $(SHAREDOBJS)
 
 CFLAGS		= -O2 -g -Wall -fno-builtin-log -static \
-		  $(PTHREADCFLAGS) $(LINUXOPTS) -DSTATS
+		  $(PTHREADCFLAGS) $(LINUXOPTS) -DSTATS -DMASTER_SERVER
 LDFLAGS		= -static
 
 #
