--- a/install/boss-install.in
+++ b/install/boss-install.in
@@ -2,7 +2,7 @@
 
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2003-2010 , 2011University of Utah and the Flux Group.
+# Copyright (c) 2003-2010 , 2011, 2011University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -723,6 +723,10 @@ Phase "patches", "Applying patches", sub {
     Phase "perlselfloaderpatch", "Fixing perl self-loader", sub {
 	my $perldir = "/usr/local/lib/perl5/5.10.1";
 	DoneIfDoesntExist("$perldir/SelfLoader.pm");
+	my $ver = `fgrep 'our \$VERSION =' $perldir/SelfLoader.pm 2>/dev/null`;
+	if ($? == 0 && $ver =~ /1\.18/) {
+	    PhaseSkip("Patch already applied");
+	}
 	ExecQuietFatal("$PATCH -d $perldir -i $SELFLOAD_PATCH");
     };
 };
