--- a/tbsetup/libosload_new.pm.in
+++ b/tbsetup/libosload_new.pm.in
@@ -50,6 +50,13 @@ my $FRISBEE         = "$TB/sbin/frisbee";
 #
 $MAXRETRIES  = 1;
 
+#
+# Hack constant factor (slop) to add to the max reload wait time for any node
+# This is set based on testbed-wide factors (like multicast being dog slow!)
+# XXX should this be exported like MAXRETRIES?
+#
+my $TBLOADWAIT  = (10 * 60);
+
 # Locals
 my $remote_mult     = 5;        # Wait lots longer for remote nodes!
 
@@ -2055,7 +2062,7 @@ sub ComputeMaxLoadWaitTime($$)
 	$maxwait += int(($chunks / 100.0) * 65);
     }
 
-    return $maxwait + (5 * 60);
+    return $maxwait + $TBLOADWAIT;
 }
 
 sub PreSetupReload($$)
